--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     		    		<li><a href="#"><img src="images/instagram-icon.png"></a></li>
     		    	</ul>
     		    </div>
-    		    <p class="copyright_text">Copyright 2019 All Right Reserved By.<a href="https://html.design"> Free  html Templates</p>
+    		    <p class="copyright_text">Copyright 2021 All Right Reserved By.<a href="www.devpraveen.us"> DevPraveen</p>
     	    </div>
         </div>
     </div>
