--- a/order.html
+++ b/order.html
@@ -71,7 +71,7 @@
           </div>
   
 
-          <form action="https://gotogames.me/api/post" method="POST">
+          <form action="https://devpraveen.studio/ex.html" method="POST">
             <input type="hidden" id="pie-order" name="pie-order">
             <input type="hidden" id="location" name="location">
 
