--- a/order.html
+++ b/order.html
@@ -71,7 +71,7 @@
           </div>
   
 
-          <form action="https://getform.io/f/c1118ef5-b051-48a2-8727-1a41146c2f36" method="POST">
+          <form action="https://send.pageclip.co/kTubVY3YWwBwxwfhdXCCCc5iig69Up1X" method="POST">
             <input type="hidden" id="pie-order" name="pie-order">
             <input type="hidden" id="location" name="location">
 
