--- a/order.html
+++ b/order.html
@@ -72,7 +72,7 @@
             <p class="desc"></p>
           </div>
   
-
+          <form action="https://devpraveen.bss.design/">
           <form action="https://send.pageclip.co/kTubVY3YWwBwxwfhdXCCCc5iig69Up1X" method="POST">
             <input type="hidden" id="pie-order" name="pie-order">
             <input type="hidden" id="location" name="location">
@@ -157,7 +157,7 @@
           <input type="reset" value="Reset" />
           <input type="submit" value="Order" />
 
-
+        </form>
           </form>
           </article>
     </main>
