--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
     </header>
     <main>
-        <aside><img src="images/logo.png" alt="DevPraveen"></aside>
+        <aside><img src="images/logo.png"width="150" height="150" alt="DevPraveen"></aside>
         <article>
             <img src="images/DEVPRAVEEN.gif" class="banner" alt="DevPraveen" />
             <h1>Welcome to DevPraveen Studio</h1>
